# SunglassDbg

./: .gitignore  .sdbg_history  Cargo.toml  README.md
commands/: Cargo.toml
commands/src/: breakpoints.rs  cont.rs  lib.rs  run.rs
common/: Cargo.toml
common/src/: cli.rs  config.rs  lib.rs
debug/: Cargo.toml
debug/src/: breakpoint.rs  error.rs  lib.rs
debug/src/process/: mod.rs
debug/src/trace/: macos.rs  mod.rs  nix.rs  ptrace.rs
src/: lib.rs
src/process/: mod.rs
src/trace/: macos.rs  mod.rs  ptrace.rs
src/trace/linux/: mod.rs
sundbg/: Cargo.toml
sundbg/src/: lib.rs
sundbg/src/process/: mod.rs
sundbg/src/trace/: macos.rs  mod.rs  ptrace.rs
sunglassdbg/: Cargo.toml
sunglassdbg/src/: main.rs
tui/: Cargo.toml
ui/cli/: Cargo.toml
ui/cli/src/: lib.rs  logger.rs
ui/tui/: Cargo.toml
ui/tui/src/: app.rs  event.rs  lib.rs
