[package]
name = "sunglassdbg"
version = "0.1.0"
authors = ["giles"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = 'sunnydbg'
path = 'bin/sunnydbg.rs'

[dependencies]
tui = { path = "./bin/tui" }
sundbg = { path = "./sundbg" }
rustyline = "7.1.0"
clap = "3.0.0-beta.2"