[package]
name = "sunglassdbg"
version = "0.1.0"
authors = ["Giles Hutton <hutton.giles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug = { path = "../debug" }
tui = { path = "../ui/tui", optional = true }
cli = { path = "../ui/cli", optional = true }

[features]
default = ["use-cli"]
use-cli = ["cli"]
use-tui = ["tui"]