[package]
name = "cli"
version = "0.1.0"
authors = ["Giles Hutton <hutton.giles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.1.0"
log = "0.4.14"
common = { path = "../../common" }
debug = { path = "../../debug" }
commands = { path = "../../commands" }
